--- a/.github/workflows/create-and-publish-wheel.yaml
+++ b/.github/workflows/create-and-publish-wheel.yaml
@@ -49,10 +49,10 @@ jobs:
     name: Publish package on PyPI
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
-    environment: pypi
+    environment: publish
     permissions:
       id-token: write
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+      
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -61,5 +61,3 @@ jobs:
           merge-multiple: true
 
       - uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://pypi.org/legacy/
